- add config log sql - add sample coding